--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,6 @@ requests==2.31.0
 seaborn==0.12.2
 tiktoken==0.5.1
 yfinance==0.2.31
-zoneinfo==0.2.1; python_version < '3.9' 
+zoneinfo==0.2.1; python_version < '3.9'
+PyMuPDF==1.23.8  # For PDF processing
+Pillow==10.1.0   # For image manipulation 
