--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ tiktoken==0.5.1
 yfinance==0.2.31
 zoneinfo==0.2.1; python_version < '3.9'
 PyMuPDF==1.23.8  # For PDF processing
-Pillow==10.1.0   # For image manipulation 
+Pillow==10.1.0   # For image manipulation
+selenium==4.14.0  # For web automation and screenshots 
